<resources>
    <string name="app_name">BattleGame</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_username_hint">请输入用户名&#8230;</string>
    <string name="login_password_hint">请输入密码&#8230;</string>
    <string name="login_email_hint">请在此输入密码&#8230;</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="register_txt1">还没有账号？</string>
    <string name="register_txt2">立即注册 ></string>
    <string name="login_account">账号 </string>
    <string name="login_pwd">密码 </string>
    <string name="login_email">确认密码 </string>
    <string name="back">返回</string>
    <string name="begin">开始</string>
    <string name="create_room">创建房间</string>
    <string name="no_room">没有房间了，请创建房间</string>
    <string name="is_create">是否创建房间</string>
    <string name="OK">OK</string>
    <string name="Cancle">Cancle</string>

</resources>
