<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg" >

    <LinearLayout
        android:id="@+id/ip_layout"
        style="@style/Register_Input"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="ip"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ip"
            style="@style/Register_Edit"
            android:hint="ip" />
    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/ip_layout"
        style="@style/Register_Input"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">

        <TextView
            style="@style/Smile.TextView._Black"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="port"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/port"
            style="@style/Register_Edit"
            android:hint="port" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:src="@drawable/head" />

        <LinearLayout
            style="@style/Register_Input"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp">

            <TextView
                style="@style/Smile.TextView._Black"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/login_account"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_username"
                style="@style/Register_Edit"
                android:hint="@string/login_username_hint" />
        </LinearLayout>

        <LinearLayout
            style="@style/Register_Input"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp">

            <TextView
                style="@style/Smile.TextView._Black"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/login_pwd"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_password"
                style="@style/Register_Edit"
                android:inputType="textPassword"
                android:hint="@string/login_password_hint" />
        </LinearLayout>

        <!--
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@android:color/white"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_username"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/base_action_bar_height"
                android:drawableLeft="@drawable/login_icon_account"
                android:drawablePadding="25dip"
                android:background="@color/transparent"
                android:hint="@string/login_username_hint"
                android:paddingLeft="15dip"
                android:shadowDx="0.0"
                android:shadowDy="1.0"
                android:shadowRadius="1.0"
                android:textColor="@android:color/black"
                android:textColorHint="#ffdddddd"
                android:cursorVisible="true"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@drawable/base_horization_line" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/base_action_bar_height"
                android:drawableLeft="@drawable/login_icon_password"
                android:drawablePadding="25dip"
                android:hint="@string/login_password_hint"
                android:background="@color/transparent"
                android:inputType="textPassword"
                android:paddingLeft="15dip"
                android:textColor="@android:color/black"
                android:textColorHint="#ffdddddd"
                android:cursorVisible="true"/>

        </LinearLayout>
-->
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_action_bar_height"
            android:layout_margin="30dp"
            android:background="@drawable/btn_login_selector"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/base_color_text_white"
            android:textSize="@dimen/text_size_large" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:gravity="center"
        android:padding="5dp"
        android:orientation="horizontal"
        android:background="#55FFFFFF">

        <TextView
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:gravity="center_vertical"
            android:text="@string/register_txt2"
            android:textColor="@color/color_theme"
            android:textSize="15sp" />
    </LinearLayout>

</RelativeLayout>